--- a/src/styles.css
+++ b/src/styles.css
@@ -136,7 +136,6 @@ td {
  */
 .container {
   margin: auto;
-  align-items: center;
   justify-content: center;
   display: flex;
   flex-direction: column;
@@ -145,6 +144,12 @@ td {
 @media screen and (min-width: 768px) {
   .container {
     margin: 0 10% !important;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    padding-bottom: 80px!important;
   }
 }
 
@@ -256,6 +261,10 @@ td {
   display: none;
 }
 
+.align-center {
+  align-items: center;
+}
+
 /*
  * Position
  */
@@ -269,4 +278,5 @@ td {
   position: fixed;
   left: 0;
   top: 0;
+  padding: 10px;
 }
